# MyHPSocket

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/tony/myhpsocket/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_tony_myhpsocket_MyHPSocket.h  myhpsocket.cpp
app/src/main/java/com/example/tony/myhpsocket/: MainActivity.java  MyHPSocket.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/tony/myhpsocket/: ExampleUnitTest.java
gen-libs/: build.gradle
gen-libs/src/main/: AndroidManifest.xml
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/hpsocket/: CMakeLists.txt
gen-libs/src/main/cpp/hpsocket/src/common/: STLHelper.h  StringT.h
gradle/wrapper/: gradle-wrapper.properties
